src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void CirclesGridFinderParameters_Delete(void* self);
extern "C" __declspec(dllexport) void* CirclesGridFinderParameters_New_0();
extern "C" __declspec(dllexport) cv::Size2f CirclesGridFinderParameters_densityNeighborhoodSize_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_densityNeighborhoodSize_set(void* self, cv::Size2f val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_minDensity_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_minDensity_set(void* self, float val);
extern "C" __declspec(dllexport) int CirclesGridFinderParameters_kmeansAttempts_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_kmeansAttempts_set(void* self, int val);
extern "C" __declspec(dllexport) int CirclesGridFinderParameters_minDistanceToAddKeypoint_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_minDistanceToAddKeypoint_set(void* self, int val);
extern "C" __declspec(dllexport) int CirclesGridFinderParameters_keypointScale_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_keypointScale_set(void* self, int val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_minGraphConfidence_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_minGraphConfidence_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_vertexGain_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_vertexGain_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_vertexPenalty_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_vertexPenalty_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_existingVertexGain_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_existingVertexGain_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_edgeGain_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_edgeGain_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_edgePenalty_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_edgePenalty_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_convexHullFactor_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_convexHullFactor_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_minRNGEdgeSwitchDist_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_minRNGEdgeSwitchDist_set(void* self, float val);
extern "C" __declspec(dllexport) int CirclesGridFinderParameters_gridType_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_gridType_set(void* self, int val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_squareSize_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_squareSize_set(void* self, float val);
extern "C" __declspec(dllexport) float CirclesGridFinderParameters_maxRectifiedDistance_get(void* self);
extern "C" __declspec(dllexport) void CirclesGridFinderParameters_maxRectifiedDistance_set(void* self, float val);
extern "C" __declspec(dllexport) void FaceDetectorYN_Delete(void* self);
extern "C" __declspec(dllexport) void FaceDetectorYN_setInputSize_0(void* self, cv::Size input_size);
extern "C" __declspec(dllexport) cv::Size FaceDetectorYN_getInputSize_0(void* self);
extern "C" __declspec(dllexport) void FaceDetectorYN_setScoreThreshold_0(void* self, float score_threshold);
extern "C" __declspec(dllexport) float FaceDetectorYN_getScoreThreshold_0(void* self);
extern "C" __declspec(dllexport) void FaceDetectorYN_setNMSThreshold_0(void* self, float nms_threshold);
extern "C" __declspec(dllexport) float FaceDetectorYN_getNMSThreshold_0(void* self);
extern "C" __declspec(dllexport) void FaceDetectorYN_setTopK_0(void* self, int top_k);
extern "C" __declspec(dllexport) int FaceDetectorYN_getTopK_0(void* self);
extern "C" __declspec(dllexport) int FaceDetectorYN_detect_0(void* self, void* image, void* faces);
extern "C" __declspec(dllexport) void* FaceDetectorYN_create_0(const char* model, const char* config, cv::Size input_size, float score_threshold, float nms_threshold, int top_k, int backend_id, int target_id);
extern "C" __declspec(dllexport) void* FaceDetectorYN_create_1(const char* framework, void* bufferModel, void* bufferConfig, cv::Size input_size, float score_threshold, float nms_threshold, int top_k, int backend_id, int target_id);
extern "C" __declspec(dllexport) void FaceRecognizerSF_Delete(void* self);
extern "C" __declspec(dllexport) void FaceRecognizerSF_alignCrop_0(void* self, void* src_img, void* face_box, void* aligned_img);
extern "C" __declspec(dllexport) void FaceRecognizerSF_feature_0(void* self, void* aligned_img, void* face_feature);
extern "C" __declspec(dllexport) double FaceRecognizerSF_match_0(void* self, void* face_feature1, void* face_feature2, int dis_type);
extern "C" __declspec(dllexport) void* FaceRecognizerSF_create_0(const char* model, const char* config, int backend_id, int target_id);
extern "C" __declspec(dllexport) void* FaceRecognizerSF_create_1(const char* framework, void* bufferModel, void* bufferConfig, int backend_id, int target_id);
extern "C" __declspec(dllexport) void GraphicalCodeDetector_Delete(void* self);
extern "C" __declspec(dllexport) bool GraphicalCodeDetector_detect_0(void* self, void* img, void* points);