src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr CirclesGridFinderParameters_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size2F CirclesGridFinderParameters_densityNeighborhoodSize_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_densityNeighborhoodSize_set(CirclesGridFinderParametersHandle self, Size2F val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_minDensity_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_minDensity_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CirclesGridFinderParameters_kmeansAttempts_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_kmeansAttempts_set(CirclesGridFinderParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CirclesGridFinderParameters_minDistanceToAddKeypoint_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_minDistanceToAddKeypoint_set(CirclesGridFinderParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CirclesGridFinderParameters_keypointScale_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_keypointScale_set(CirclesGridFinderParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_minGraphConfidence_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_minGraphConfidence_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_vertexGain_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_vertexGain_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_vertexPenalty_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_vertexPenalty_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_existingVertexGain_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_existingVertexGain_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_edgeGain_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_edgeGain_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_edgePenalty_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_edgePenalty_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_convexHullFactor_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_convexHullFactor_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_minRNGEdgeSwitchDist_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_minRNGEdgeSwitchDist_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CirclesGridFinderParameters_gridType_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_gridType_set(CirclesGridFinderParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_squareSize_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_squareSize_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CirclesGridFinderParameters_maxRectifiedDistance_get(CirclesGridFinderParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CirclesGridFinderParameters_maxRectifiedDistance_set(CirclesGridFinderParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceDetectorYN_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceDetectorYN_setInputSize_0(FaceDetectorYNHandle self, Size input_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size FaceDetectorYN_getInputSize_0(FaceDetectorYNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceDetectorYN_setScoreThreshold_0(FaceDetectorYNHandle self, float score_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float FaceDetectorYN_getScoreThreshold_0(FaceDetectorYNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceDetectorYN_setNMSThreshold_0(FaceDetectorYNHandle self, float nms_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float FaceDetectorYN_getNMSThreshold_0(FaceDetectorYNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceDetectorYN_setTopK_0(FaceDetectorYNHandle self, int top_k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FaceDetectorYN_getTopK_0(FaceDetectorYNHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FaceDetectorYN_detect_0(FaceDetectorYNHandle self, MatHandle image, MatHandle faces);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FaceDetectorYN_create_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config, Size input_size, float score_threshold, float nms_threshold, int top_k, int backend_id, int target_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FaceDetectorYN_create_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? framework, IntPtr bufferModel, IntPtr bufferConfig, Size input_size, float score_threshold, float nms_threshold, int top_k, int backend_id, int target_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceRecognizerSF_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceRecognizerSF_alignCrop_0(FaceRecognizerSFHandle self, MatHandle src_img, MatHandle face_box, MatHandle aligned_img);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FaceRecognizerSF_feature_0(FaceRecognizerSFHandle self, MatHandle aligned_img, MatHandle face_feature);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double FaceRecognizerSF_match_0(FaceRecognizerSFHandle self, MatHandle face_feature1, MatHandle face_feature2, int dis_type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FaceRecognizerSF_create_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config, int backend_id, int target_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FaceRecognizerSF_create_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? framework, IntPtr bufferModel, IntPtr bufferConfig, int backend_id, int target_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GraphicalCodeDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool GraphicalCodeDetector_detect_0(GraphicalCodeDetectorHandle self, MatHandle img, MatHandle points);
